some progress, basic code layout

--- a/app/src/main/res/raw/puzzlecode1.html
+++ b/app/src/main/res/raw/puzzlecode1.html
@@ -1,5 +1,35 @@
-<h2>Title</h2><br>
-<p>description here</p><br>
-<p>description here</p><br>
-<p>description here</p><br>
-<p>description here</p><br>
+<h2>Title</h2>
+<p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p><p class=""><strong>description</strong> here</p>
+<p style="color:red">description here</p>
+<p>description here</p>
+<p>description here</p>
