code highlighting initially done

--- a/app/src/main/res/raw/puzzlecode1.html
+++ b/app/src/main/res/raw/puzzlecode1.html
@@ -1,35 +1,7 @@
-<h2>Title</h2>
-<p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p><p class=""><strong>description</strong> here</p>
-<p style="color:red">description here</p>
-<p>description here</p>
-<p>description here</p>
+public static void main(String[] args) {
+    long l = 123456789; //answer: any negative
+    long l2 = l &gt;&gt; 63;
+    System.out.println("l2: " + l2);
+    boolean condition = l2 != 0;
+    PuzzleAssert.assertTrue(condition);
+}
