run puzzle basically done

--- a/app/src/main/res/raw/puzzlecode1.html
+++ b/app/src/main/res/raw/puzzlecode1.html
@@ -1,7 +1,20 @@
 public static void main(String[] args) {
-    long l = 123456789; //answer: any negative
-    long l2 = l &gt;&gt; 63;
-    System.out.println("l2: " + l2);
-    boolean condition = l2 != 0;
-    PuzzleAssert.assertTrue(condition);
+    Scanner sc = new Scanner(System.in);
+    String input = sc.next();
+
+    boolean passed = test(Long.parseLong(input));
+
+    System.out.println(
+        passed ? "passed" : "failed");
+}
+
+static boolean test(long l) {
+    long l2 = l >> 63;
+
+    System.out.println(
+        "l bin: " + Long.toBinaryString(l));
+    System.out.println(
+        "l2 bin: " + Long.toBinaryString(l2));
+
+    return l2 != 0;
 }
