puzzle4 long pool

--- a/app/src/main/res/raw/puzzlecode3.html
+++ b/app/src/main/res/raw/puzzlecode3.html
@@ -8,7 +8,7 @@ public static void main(String[] args) {
         passed ? "passed" : "failed");
 }
 
-public static boolean test(int i) {
+static boolean test(int i) {
     System.out.println("i*i: " + i * i);
     return i != 0 && i * i == 0;
 }
