disable test ads, polishing

--- a/app/src/main/res/raw/puzzlecode4.html
+++ b/app/src/main/res/raw/puzzlecode4.html
@@ -2,7 +2,8 @@ public static void main(String[] args) {
     Scanner sc = new Scanner(System.in);
     String input = sc.next();
 
-    boolean passed = test(Integer.parseInt(input));
+    boolean passed =
+        test(Integer.parseInt(input));
 
     System.out.println(
         passed ? "passed" : "failed");
